Fix alignment

--- a/wp-content/themes/hdg/src/scss/blocks/_carousel.scss
+++ b/wp-content/themes/hdg/src/scss/blocks/_carousel.scss
@@ -1,9 +1,4 @@
 .carousel-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 .carousel {
     display: flex;
@@ -42,6 +37,10 @@
                 align-items: center;
                 justify-content: center;
                 aspect-ratio: 1 / 1;
+                img {
+                    max-width: 10rem;
+                    height: auto;
+                }
             }
         }
     }
